syntax = "proto3";

option csharp_namespace = "Showtime.Grpc";

import "google/protobuf/timestamp.proto";

service ShowtimeService {
  rpc GetShowtime (GetShowtimeRequest) returns (GetShowtimeResponse);
}

message GetShowtimeRequest {
  string showtime_id = 1;
}

message GetShowtimeResponse {
  bool found = 1;
  ShowtimeDto showtime = 2;
}

message ShowtimeDto {
  string id = 1;
  string movie_id = 2;
  string cinema_id = 3;
  string hall_id = 4;
  string movie_title = 5;
  string cinema_name = 6;
  string hall_name = 7;
  google.protobuf.Timestamp start_time_utc = 8;
}